--- a/io-manifest.yml
+++ b/io-manifest.yml
@@ -73,11 +73,11 @@ buildbreaker:
   - high
 tool_information:
 - tool_name: coverity
-  enabled: <<IS_SAST_ENABLED>>
+  enabled: false
   fields:
     file_path: coverity-results.json
 - tool_name: polaris
-  enabled: false
+  enabled: true
   fields:
     project_name: <<POLARIS_PROJECT_NAME>>
     instance_url: <<POLARIS_SERVER_URL>>
