--- a/io-manifest.yml
+++ b/io-manifest.yml
@@ -35,8 +35,8 @@ security:
 connectors:
 - connector_name: slack
   fields:
-    channelidentifier:
-    bearertoken:
+    channelidentifier: C015LGE7RRQ
+    bearertoken: <<SLACK_TOKEN>>
 - connector_name: jira
   fields:
     issuetype: Bug
