--- a/io-manifest.yml
+++ b/io-manifest.yml
@@ -43,7 +43,7 @@ connectors:
     issuetype: Bug
     projectkey: <<JIRA_PROJECT_NAME>>
     assignee: <<JIRA_ASSIGNEE>>
-    url: https://altair-dev01.dev.polaris.synopsys.com
+    url: <<JIRA_API_URL>>
     username: <<JIRA_USERNAME>>
     authtoken: <<JIRA_AUTH_TOKEN>>
 - connector_name: github
