--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         export POLARIS_SERVER_URL=${{secrets.POLARIS_SERVER_URL}}
         export POLARIS_ACCESS_TOKEN=${{secrets.POLARIS_ACCESS_TOKEN}}
-        wget -q https://dev01.dev.polaris.synopsys.com/api/tools/polaris_cli-macosx.zip
+        wget -q http://sipse.polaris.synopsys.com/api/tools/polaris_cli-macosx.zip
         unzip -j -o polaris_cli-macosx.zip -d /tmp
         /tmp/polaris analyze -w
         
