--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,9 @@ jobs:
       run: |
         export POLARIS_SERVER_URL=${{secrets.POLARIS_SERVER_URL}}
         export POLARIS_ACCESS_TOKEN=${{secrets.POLARIS_ACCESS_TOKEN}}
+        echo "curl https://dev01.dev.polaris.synopsys.com"
         curl https://dev01.dev.polaris.synopsys.com
+        echo "wget -q https://dev01.dev.polaris.synopsys.com/api/tools/polaris_cli-macosx.zip"
         wget -q https://dev01.dev.polaris.synopsys.com/api/tools/polaris_cli-macosx.zip
         echo "polaris cli completed"
         unzip -j -o polaris_cli-macosx.zip -d /tmp
