--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,10 @@ jobs:
       run: |
         export POLARIS_SERVER_URL=${{secrets.POLARIS_SERVER_URL}}
         export POLARIS_ACCESS_TOKEN=${{secrets.POLARIS_ACCESS_TOKEN}}
+        echo ${{ steps.ip.outputs.ipv4 }}
+        echo ${{ steps.ip.outputs.ipv6 }}
+        curl https://dev01.dev.polaris.synopsys.com
+        
         echo "command working"
         curl https://dev01.dev.polaris.synopsys.com
         echo "wget -q https://dev01.dev.polaris.synopsys.com/api/tools/polaris_cli-macosx.zip"
